src/PJ/POCO/TEST/POS/PARRAY03.POC
/* Test handling near the limit of array dimensions allowed */
#pragma poco echo "expect>Success"

char pt[2][2][2][2][2][2][2][2][2][2][2][2][2][2][2][2];

main()
{
pt[1][1][1][1][1][1][1][1][1][1][1][1][1][1][0][1] = 16;
if (pt[1][1][1][1][1][1][1][1][1][1][1][1][1][1][0][1] == 16)
	printf("Success");
}
